labs/admission/specs/ckad/exercise3-other-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  namespace: quota-demo
  labels:
    app: api-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
      - name: api
        image: kiamol/ch03-numbers-api:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
